pom.xml: set --illegal-access=permit in tests
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>